src/minikube/SampleProto/triton_pkg/cpx.yml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: cpx
spec:
  template:
    metadata:
      name: cpx
      labels:
        app: cpx-daemon
      annotations:
        NETSCALER_AS_APP: "True"
    spec:
      serviceAccountName: cpx
      hostNetwork: true
      containers:
        - name: cpx
          image: "in-docker-reg.eng.citrite.net/cpx-dev/cpx_embedded_triton_v41:1.0"
          securityContext:
             privileged: true
