src/minikube/SampleProto/triton_pkg/triton.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nsingresscontroller
  labels:
    app: nsingresscontroller
spec: 
      serviceAccountName: cpx
      containers:
      - name: nsingresscontroller
        image: triton:4.0
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
        imagePullPolicy: Never
